--- a/src/components/Gridcontainer/Grid.css
+++ b/src/components/Gridcontainer/Grid.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
      /* grid-template-columns: 33.33% 33.33% 33.33%; */
   /* grid-auto-rows: 500px; */
-    /* width:100%; */
+    width:100%;
     /* background-color:$searchbgcolor;
     color:$color;
    */
